Fix:		Remove white "shadow" in tabs in dark mode

--- a/private/sass/base.scss
+++ b/private/sass/base.scss
@@ -14,10 +14,6 @@
     @include visually-hidden
 }
 
-:root {
-    color-scheme: dark light;
-}
-
 ul.nav {
     margin-bottom: 1em;
     & > li.nav-item {
